# Explorobot

./: CMakeLists.txt  README.md  package.xml
config/: gazebo_bridge.yaml  nav2_params.yaml  ros2_control.yaml  slam_toolbox.yaml
launch/: explore_robot.launch.xml  explore_robot_gazebo.launch.xml  nav2_slam.launch.py
models/: lidar.sdf
rviz/: rviz_config.rviz
urdf/: common_properties.xacro  explore_robot.urdf.xacro  gazebo_plugins.xacro  lidar.xacro  robot_base.xacro
worlds/: test_world.sdf
